# tubefetch

./: .gitignore  .project-guides.yml  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  coverage.xml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.pyve/: config
docs/guides/: README.md  ai-ready-features.md  best-practices-guide.md  best_practices_guide.md  content-hashing.md  debug_guide.md  descriptions-guide.md  documentation-setup-guide.md  playlist-resolution.md  project-guide.md  use-cases.md  video-bundles.md
docs/site/: .gitignore  advanced.md  api.md  changelog.md  getting-started.md  index.html  llm-text-formatting.md  token-counting.md  troubleshooting.md  usage.md
docs/specs/: descriptions.md  error-handling-features.md  features.md  stories.md  tech-spec.md  tech_spec.md
tests/: conftest.py  test_batch.py  test_bundle.py  test_cli.py  test_errors.py  test_gentlify_config.py  test_hashing.py  test_id_parser.py  test_idempotency.py  test_library_api.py  test_logging.py  test_media.py  test_metadata.py  test_models.py  test_pipeline.py  test_pipeline_errors.py  test_rate_limit.py  test_resolver.py  test_summary.py  test_token_counter.py  test_transcript.py  test_transcript_format.py  test_txt_formatter.py  test_writer.py
tests/integration/: test_fetch_live.py
tubefetch/: __init__.py  __main__.py  cli.py
tubefetch/core/: errors.py  logging.py  models.py  options.py  pipeline.py  writer.py
tubefetch/services/: __init__.py  media.py  metadata.py  resolver.py  transcript.py
tubefetch/utils/: gentlify_config.py  hashing.py  time_fmt.py  token_counter.py  txt_formatter.py
yt_fetch/: __init__.py  __main__.py  cli.py
(+16 files in other folders)
