[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tubefetch"
version = "1.4.1"
description = "Extract AI-ready YouTube content: metadata, transcripts, and media in structured formats."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.14"
authors = [
    { name = "pointmatic" },
]
keywords = ["youtube", "transcript", "metadata", "yt-dlp", "video", "ai", "llm", "content-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]
dependencies = [
    "yt-dlp",
    "youtube-transcript-api",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click",
    "pyyaml",
    "rich",
    "gentlify",
]

[project.urls]
Homepage = "https://github.com/pointmatic/tubefetch"
Repository = "https://github.com/pointmatic/tubefetch"
"Bug Tracker" = "https://github.com/pointmatic/tubefetch/issues"
Changelog = "https://github.com/pointmatic/tubefetch/releases"

[project.optional-dependencies]
youtube-api = [
    "google-api-python-client",
]
tokens = [
    "tiktoken",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "build",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.scripts]
tubefetch = "tubefetch.cli:cli"

[tool.setuptools.packages.find]
include = ["tubefetch*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
